Adding new application status completed and adding control over which user can update what status. Applying security config, New exception 409 conflict, adding patchApplication method, fixin database columns, adding tests.
